--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.2.5"
+    },
+    "require-dev": {
         "phpunit/phpunit": "^9.1"
     },
     "config": {
