--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Utility to valid and determine bank card type by stgit90",
     "type": "library",
     "minimum-stability": "dev",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "license": "MIT",
     "authors": [
         {
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5"
+        "php": ">=7.2.5, <=8.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.1"
